Improve performance when rendering CSS opacity layers, by using CompositionMode_DestinationIn to reduce the alpha of the layers before rendering them, instead of using QPainter::setOpacity().

With this change we no longer end up in
QPainterPrivate::draw_helper(), and the rendering is fully
accelerated in hardware with drivers that accelerate Xrender.

BUG: 154420

svn path=/trunk/KDE/kdelibs/; revision=809426